src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Clinic_Address__c</fullName>
        <description>This represents the address of the clinic represented in the product.</description>
        <label>Clinic Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clinic_Live_Date__c</fullName>
        <label>Clinic Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Revenue_Schedule_Months__c</fullName>
        <label>Default # Revenue Schedule Months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Photo__c</fullName>
        <label>Product Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Revenue_Schedule_Method__c</fullName>
        <label>Revenue Schedule Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                    <default>true</default>
                    <label>Straight Line</label>
                </value>
                <value>
                    <fullName>S-Curve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Interval_Override__c</fullName>
        <description>Format for this field is one of &apos;Dxxx&apos;, &apos;Mxxx&apos;, &apos;Yxxx&apos; where &apos;xxx&apos; is the number of Days, Months or Years. e.g. M1, D7, Y1
This overrides the Global Shedule Interval defined in the &apos;Schedule Settings&apos; Custom Setting</description>
        <inlineHelpText>Format for this field is one of &apos;Dxxx&apos;, &apos;Mxxx&apos;, &apos;Yxxx&apos; where &apos;xxx&apos; is the number of Days, Months or Years. e.g. M1, D7, Y1
This overrides the Global Shedule Interval defined in the &apos;Schedule Settings&apos; Custom Setting</inlineHelpText>
        <label>Schedule Interval Override</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Clinic_Live_Date__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Clinic_Address__c</columns>
        <columns>PRODUCT2.DISPLAY_URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>